[project]
name = "images2rhtml"
version = "0.1.0.dev4"
description = "Generate MD//WORKS Restricted Viewer Format v1 compatible HTML from image folders."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "cryptography>=41",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
